# raytracer-4d

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
include/: hit.h  image.h  malloc.h  material.h  ray.h  scene.h  scene_deserializer.h  scene_print.h
include/objects/: group.h  hyperplane.h  hypersphere.h  object.h  primitives.h
include/util/: random.h
scenes/: sphere.txt
scripts/: build.bat  run.bat
src/: image.c  main.c  malloc.c  scene.c  scene_deserializer.c  scene_print.c
src/objects/: group.c  hyperplane.c  hypersphere.c
src/util/: random.c
